fix(template/themes): repair quantity selector broken styles on ecom-beauty theme (#753)
* fix(storefront-components/quantity-selector): repair quantity selector broken styles

* style(themes/ecom-beauty): remove useless space on product scss

--- a/@ecomplus/storefront-components/src/scss/QuantitySelector.scss
+++ b/@ecomplus/storefront-components/src/scss/QuantitySelector.scss
@@ -1,6 +1,10 @@
 .quantity-selector {
   &__btn-container {
     min-width: 7rem;
+
+    button {
+      max-width: 28px;
+    }
   }
 
   &__item {
